--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 alembic==1.4.2
 cffi==1.14.2
 click==7.1.2
-cryptography==3.0
+cryptography==2.9.2
 Flask==1.1.2
 flask-marshmallow==0.13.0
 Flask-Migrate==2.5.3
+Flask-SocketIO==4.3.1
 Flask-SQLAlchemy==2.4.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jwt==1.0.0
 Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.7.1
@@ -16,6 +18,8 @@ pycparser==2.20
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
+python-engineio==3.13.2
+python-socketio==4.6.0
 Serialize==0.1
 Serializer==0.2.1
 simplejson==3.17.2
