--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,14 @@ alembic==1.4.2
 cffi==1.14.2
 click==7.1.2
 cryptography==2.9.2
+dnspython==1.16.0
+eventlet==0.26.1
 Flask==1.1.2
 flask-marshmallow==0.13.0
 Flask-Migrate==2.5.3
 Flask-SocketIO==4.3.1
 Flask-SQLAlchemy==2.4.4
+greenlet==0.4.16
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jwt==1.0.0
@@ -14,6 +17,7 @@ Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.7.1
 marshmallow-sqlalchemy==0.23.1
+monotonic==1.5
 pycparser==2.20
 python-dateutil==2.8.1
 python-dotenv==0.14.0
