--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.4.2
+certifi==2020.6.20
 cffi==1.14.2
+chardet==3.0.4
 click==7.1.2
-cryptography==2.9.2
+cryptography==3.0
 dnspython==1.16.0
 eventlet==0.26.1
 Flask==1.1.2
@@ -10,9 +12,9 @@ Flask-Migrate==2.5.3
 Flask-SocketIO==4.3.1
 Flask-SQLAlchemy==2.4.4
 greenlet==0.4.16
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
-jwt==1.0.0
 Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.7.1
@@ -24,9 +26,11 @@ python-dotenv==0.14.0
 python-editor==1.0.4
 python-engineio==3.13.2
 python-socketio==4.6.0
+requests==2.24.0
 Serialize==0.1
 Serializer==0.2.1
 simplejson==3.17.2
 six==1.15.0
-SQLAlchemy==1.3.18
+SQLAlchemy==1.3.19
+urllib3==1.25.10
 Werkzeug==1.0.1
